@@ -1,3 +1,10 @@
+Mon Jul 16 03:34:27 GMT 2012  Olly Betts <olly@survex.com>
+
+	* include/xapian/enquire.h: Clarify that the "reverse" parameter of
+	  set_sort_by_relevance_then_value() and
+	  set_sort_by_relevance_then_key() only affects the ordering of the
+	  value/key part of the sort.
+
 Fri Jul 13 04:55:26 GMT 2012  Dan Colish <dcolish@gmail.com>
 
 	* matcher/multimatch.cc: Remove duplicate import
